# node-gstreamer-superficial

./: CMakeLists.txt  GLibHelpers.cpp  GLibHelpers.h  GObjectWrap.cpp  GObjectWrap.h  LICENSE  Pipeline.cpp  Pipeline.h  README.md  binding.gyp  gstreamer.cc  gstreamer.cpp  package-lock.json  package.json
examples/: appsink.js  appsrc.js  basic-pipeline.js  bus.js  fakesink.js  glshader.js  query.js  seek.js  set-pad.js
examples/loop/: loop.js
examples/m-jpeg-streamer/: README.md  server.js
examples/mpeg-streamer/: README.md  index.html  server.js
examples/streaming/: index.html  server.js
